welcome.lessons.welcome.loopwhile.LoopWhile.scala.error
Program:1: error: not found: value esFaceMur
while (esFaceMur()==false) {
       ^